--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -17,6 +17,7 @@
 .shareProfileImg {
   width: 50px;
   height: 50px;
+  margin-right: 10px;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 10px;
@@ -96,4 +97,3 @@
   cursor: pointer;
   opacity: 0.7;
 }
-
