--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,63 +1,63 @@
-.profile{
-    display: flex;
+.profile {
+  display: flex;
 }
 
-.profileRight{
-    flex: 9;
+.profileRight {
+  flex: 9;
 }
 
-.profileCover{
-    height: 320px;
-    position: relative;
+.profileCover {
+  height: 320px;
+  position: relative;
 }
 
-.profileCoverImg{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
+.profileCoverImg {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
 
-.profileUserImg{
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 150px;
-    border: 3px solid white;
+.profileUserImg {
+  width: 150px !important;
+  height: 150px !important;
+  /* border-radius: 50% ; */
+  object-fit: cover;
+  position: absolute !important;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 150px;
+  border: 3px solid white;
 }
-.editProfilePicture{
-    left: 150px;
-    right: 0;
-    margin: auto;
-    position: absolute;
-    width: 30px;
-    bottom: 30px;
-
+.editProfilePicture {
+  left: 150px;
+  right: 0;
+  margin: auto;
+  position: absolute;
+  width: 30px;
+  bottom: 30px;
 }
-.editProfilePicture:hover{
-    opacity: .7;
-    cursor: pointer;
-}
-
-.profileInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.editProfilePicture:hover {
+  opacity: 0.7;
+  cursor: pointer;
 }
 
-.profileInfoName{
-    font-size: 24px;
+.profileInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.profileInfoDesc{
-    font-weight: 300;
+.profileInfoName {
+  font-size: 24px;
+  margin: 10px;
 }
 
-.profileRightBottom{
-    display: flex;
+.profileInfoDesc {
+  font-weight: 300;
+}
+
+.profileRightBottom {
+  display: flex;
 }
